# mcp-multiagent-bridge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EXAMPLE_WORKFLOW.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  YOLO_MODE.md  bridge_cli.py  claude_bridge_secure.py  demo_standalone.py  pyproject.toml  rate_limiter.py  requirements.txt  test_bridge.py  test_security.py  yolo_guard.py  yolo_mode.py
.github/workflows/: ci.yml
scripts/: update-repo-links.sh
